web-infras/parser/tests/fixtures/babel/es2015/array-rest-spread/comma-after-spread-nested/output.txt
[SyntaxError]: Rest parameter must be last formal parameter (1,9)
1|[[...a,]] = [];
 |       ^
